--- a/1 Advanced web design/1-9小米网站0725/css/小米商城.css
+++ b/1 Advanced web design/1-9小米网站0725/css/小米商城.css
@@ -4,6 +4,7 @@
     text-decoration: none;
     list-style: none;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 .clearfix::after {
@@ -162,4 +163,71 @@
 
 .pro_cate_nav .pro_cate_nav_list li:hover {
     color: red;
+}
+
+/* 分类的左边栏 */
+.pro_middle {}
+
+.pro_middle .pro_middle_catelist {
+    width: 19%;
+    background: #3F3D3D;
+    padding: 25px 0;
+    float: left;
+}
+
+.pro_middle_catelist li {
+    height: 53px;
+    line-height: 53px;
+    font-size: 20px;
+    color: #d1d1d1;
+}
+
+.pro_middle_catelist li:hover {
+    background-color: #FF6A00;
+    color: #fff;
+}
+
+/* 设置轮播图容器尺寸 */
+.pro_middle_lunbo {
+    border: 1px solid green;
+    float: left;
+    width: 81%;
+    height: 580px;
+}
+
+/* 轮播样式 */
+.swiper {
+    /* width: 100%;
+    height: 100%; */
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.my-bullet {
+    width: 10px;
+    height: 10px;
+    background-color: aqua;
+    display: inline-block;
+    margin: 0px 10px;
+    border-radius: 50%;
+    /* position: absolute;
+    right: -100; */
+}
+
+.swiper-pagination-bullet-active {
+    background-color: red;
 }
