--- a/3 MobileTerminal/css/jd移动首页.css
+++ b/3 MobileTerminal/css/jd移动首页.css
@@ -18,7 +18,7 @@ a {
 }
 
 .top {
-    height: 100px;
+    /* height: 100px; */
     background-color: purple;
 }
 
@@ -31,7 +31,7 @@ a {
 .search_box>.search_option {
     width: 3.375rem;
     height: 100%;
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
 }
 
 .icon-liebiao2 {
@@ -40,11 +40,92 @@ a {
     font-weight: 700;
 }
 
+.search_login {
+    width: 3.375rem;
+    height: 100%;
+    /* border: 1px solid green; */
+    font-size: 1.125rem;
+    color: white;
+}
+
+
+.search_container {
+    flex: 1;
+    height: 40px;
+    background-color: #f7f7f7;
+    border-radius: 1.25rem;
+}
+
+.search_container_logo {
+    width: 50px;
+    /* border: .0625rem solid blue; */
+    height: 100px;
+
+}
+
+.search_container input {
+    font-size: .875rem;
+    border: none;
+    outline: none;
+    background-color: #f7f7f7;
+}
+
+.search_container_fangdajing {
+    width: 2.5rem;
+    border-left: 1px solid #C6c7c6;
+}
+
+.icon-jingdong {
+    font-size: 24px;
+    font-weight: bold;
+    color: #EA4A4C;
+}
+
+.swiper {
+    width: 100%;
+    /* height: 100%; */
+    border-radius: 20px;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    /* height: 100%; */
+    object-fit: cover;
+}
+
+.classify {
+    flex-wrap: wrap;
+    gap: .625rem;
+    margin-top: .625rem;
+}
+
+.classify div {
+    width: 70px;
+    height: 80px;
+    border: 1px solid red;
+}
+
 /* 中间商品列表 middle 自动伸长 */
 .middle {
-    background-color: green;
+    background-color: yellowgreen;
     flex: 1;
 
+}
+
+.top_bottom {
+    height: 23.5625rem;
+    background-color: #f7f7f7;
+    padding: 0 1.125rem;
 }
 
 .bottom {
