--- a/3 MobileTerminal/css/jd移动首页.css
+++ b/3 MobileTerminal/css/jd移动首页.css
@@ -105,15 +105,29 @@ a {
 
 .classify {
     flex-wrap: wrap;
-    gap: .625rem;
     margin-top: .625rem;
 }
 
-.classify div {
-    width: 70px;
-    height: 80px;
-    border: 1px solid red;
+.classify>div {
+    width: 4.375rem;
+    height: 5rem;
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: .625rem;
 }
+
+.classify p {
+    font-size: .875rem;
+}
+
+.classify img {
+    width: 3.75rem;
+    margin-bottom: .3125rem;
+}
+
 
 /* 中间商品列表 middle 自动伸长 */
 .middle {
@@ -122,10 +136,34 @@ a {
 
 }
 
+.middle>div {
+    width: 45%;
+
+}
+
+.middle img {
+    width: 100%;
+}
+
+.middle h2 {
+    width: 200px;
+    height: 90px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-weight: 400;
+}
+
+.middle h3 {
+    font-weight: 400;
+    color: #FF4142;
+    font-size: 20px;
+}
+
+
 .top_bottom {
-    height: 23.5625rem;
+    /* height: 23.5625rem; */
     background-color: #f7f7f7;
-    padding: 0 1.125rem;
+    padding: 0 18px;
 }
 
 .bottom {
